--- a/cloud.html
+++ b/cloud.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
+  <title>imagen nube</title>
 </head>
 <body>
 <img src =  "https://aaizemberg.github.io/vis/wordle/wordle.png"/>
