--- a/perfil.html
+++ b/perfil.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>foto_perfil_cyn</title>
+  <title>imagen </title>
 </head>
 <body>
-<img src =  foto1.png />
+<img src = foto1.png/>
 </body>
 </html>
